# zkML-trustless-payment-example

./: README.md
client/: Cargo.toml
client/src/: main.rs
server/: .gitignore  Cargo.toml
server/send_usdc/: package-lock.json  package.json  send_usdc.js
server/src/: contract_interactions.rs  main.rs
server/usdc_abi/: usdc_abi.json
