[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
nova = { git = "https://github.com/wyattbenno777/arecibo", branch = "wyatt_dev", package = "arecibo" }
anyhow = "1.0.81"
zk-engine = { git = "https://github.com/ICME-Lab/zkEngine_dev", branch = "main" }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
